GARPDev-salesforce/eclipse/GARPDev/src/objects/Venue__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To define weather the Site is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <summarizedField>Room__c.Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Room__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Room__c.Venue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <label>Cloned From</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Rooms_Active__c</fullName>
        <label>No of Rooms (Active)</label>
        <summaryFilterItems>
            <field>Room__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Room__c.Venue__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Rooms__c</fullName>
        <label>No of Rooms</label>
        <summaryForeignKey>Room__c.Venue__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Venues</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Rooms__c</fullName>
        <label>Total Rooms</label>
        <summaryForeignKey>Room__c.Venue__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasActiveRooms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by venue trigger to pass room status back to validation rules.</description>
        <label>hasActiveRooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasSeatsAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasSeatsAssigned</label>
        <type>Checkbox</type>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Address1__c</columns>
        <columns>Address2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Phone_No__c</columns>
        <columns>Site__c</columns>
        <columns>Capacity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check4Active_Rooms</fullName>
        <active>true</active>
        <description>If there are any active rooms block user from deactivating the venue</description>
        <errorConditionFormula>AND( hasActiveRooms__c,  NOT(Active__c ))</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>Cannot deactivate Venue with active rooms.  Please deactivate rooms in this Venue and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_if_rooms_are_empty</fullName>
        <active>true</active>
        <description>Can&apos;t deactivate venue unless rooms are empty</description>
        <errorConditionFormula>AND( hasSeatsAssigned__c ,   NOT( Active__c ) )</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>Cannot deactivate venue until ALL candidates have been moved to other venues.</errorMessage>
    </validationRules>
</CustomObject>